# ray-tracing

./: .gitignore  01-hello.ppm  CMakeLists.txt  README.md  camera.cpp  camera.h  color.cpp  color.h  hittable.cpp  hittable.h  hittable_list.h  image.ppm  image_always_refracts.ppm  image_depth_field.ppm  image_distant_view.ppm  image_hollow_glass_sphere.ppm  image_material.ppm  image_material_gamma.ppm  image_sometimes_refracts.ppm  image_sphere.ppm  image_wide_angle.ppm  image_zooming.ppm  main.cpp  material.cpp  material.h  ray.cpp  ray.h  rtweekend.cpp  rtweekend.h  run.bat  sphere.cpp  sphere.h  usegit.txt  vec3.cpp  vec3.h  xmake.lua
source/: CMakeLists.txt  main.cpp
source/02-vec3class/: CMakeLists.txt
source/02-vec3class/include/color/: color.h
source/02-vec3class/include/vec3/: vec3.h
source/02-vec3class/src/: color.cpp  vec3.cpp
source/03-rayclass/: CMakeLists.txt
source/03-rayclass/src/: color.cpp  ray.cpp  vec3.cpp
source/04-addsphere/: CMakeLists.txt
source/04-addsphere/src/: color.cpp  hittable.cpp  hittable_list.cpp  ray.cpp  rtweekend.cpp  sphere.cpp  vec3.cpp
source/05-antialiasing/: CMakeLists.txt
source/05-antialiasing/src/: color.cpp  ray.cpp  rtweekend.cpp  vec3.cpp
source/06-material/: CMakeLists.txt
source/06-material/src/: camera.cpp  color.cpp  hittable_list.cpp  rtweekend.cpp  sphere.cpp  vec3.cpp
source/07-metal/: CMakeLists.txt
source/07-metal/src/: material.cpp  sphere.cpp  vec3.cpp
source/main/: CMakeLists.txt
source/main/src/: camera.cpp  color.cpp  hittable.cpp  material.cpp  rtweekend.cpp  sphere.cpp  vec3.cpp
(+68 files in other folders)
